1- Added Context api to project 2- modified the state to hold latLong and coffeeStores 3- changed coffee-store component to fetch coffee store data from the state if \ 	the id of the store is not in the initial sotres renderd from getStaticProps

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,8 @@ body {
 	background: url("/static/background.png");
 	background-position: 50%;
 	background-repeat: no-repeat;
+	background-size: cover;
 	color: #373b64;
-	height: 100%;
 }
 @font-face {
 	font-family: "IBMPlexSans";
